FIXED arduini-images padding/margin effect on small devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,14 @@ a:active{
 	color: #b2dbdd !important;
 
 }
+/*
+a:disabled btn-primary{
+	background-color: black;
+}
+a not(tabindex){
+	background-color: black !important;
+}
+*/
 .a2{
 	text-decoration: none;
     color: #00878F;
@@ -165,6 +173,9 @@ a:active{
 /*		background-size 10s ease-in-out,*/
 		box-shadow 2s;
 	-webkit-transition: padding 500ms ease-in-out, margin 500ms ease-in-out, background-size 10s ease-in-out, box-shadow 2s;
+}
+.no-border{
+	border: 0px;
 }
 .arduino-logo{
 	display: inline;
@@ -1001,6 +1012,9 @@ td{
 	h1, h2, h3, h4, h5, h6{
 		font-size: 1.3rem !important;
 	}
+	#homeProjectsTitle{
+		font-size: 5.5vw;;
+	}
 }
 /*	 320.98px*/
 /*Extra small devices (portrait phones, less than 576px)*/
@@ -1032,6 +1046,7 @@ td{
 /*		top: 52px;*/
 		top: inherit;
 		bottom: 0px;
+		height: 80px;
 	}
 	.button-spacing{
 		margin-bottom: 10px;
@@ -1040,6 +1055,7 @@ td{
 /*		top: 52px;*/
 		top: inherit;
 		bottom: 0px;
+		height: 80px;
 	}
 	.carousel-image{
 		width: 300px;
@@ -1078,11 +1094,13 @@ td{
 		max-width: 100%;
 	}
 	.arduino-images{
+/*
 		min-width: 14rem;
 		padding: 0px;
 		margin: 15px;
 		box-shadow: 2px 2px 5px rgba(0,0,0,.1);
-		max-width: 100%;
+*/
+/*		max-width: calc(100% - 5px);*/
 /*
 		transition:none;
 		-webkit-transition: none;
